<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/tiled"
    tools:context="com.lak.android.sqlcrudactivitywithimage.MainActivity" >

<!--android:background="#FFA500" !-->

    <EditText
        android:id="@+id/edtName"
        android:layout_width="277dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginEnd="110dp"
        android:background="@drawable/custom_edit_txt_bg"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtIngred"
        android:layout_width="277dp"
        android:layout_height="42dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-13dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/custom_edit_txt_bg"

        android:hint="@string/ingredients"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtPreptime"
        android:layout_width="277dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"

        android:layout_marginTop="150dp"
        android:background="@drawable/custom_edit_txt_bg"

        android:hint="@string/preptime"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtNutvalue"
        android:layout_width="277dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"

        android:layout_marginTop="217dp"
        android:background="@drawable/custom_edit_txt_bg"
        android:hint="@string/nutvalue"
        android:inputType="number"
        android:autofillHints="" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignBottom="@+id/btnAdd"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:contentDescription="@null"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="162dp"
        android:layout_marginEnd="27dp"

        android:text="@string/Choose_image" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/btnChoose"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="49dp"

        android:text="@string/Add" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnChoose"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="102dp"

        android:text="@string/Recipe_List" />

    <Button
        android:id="@+id/btnRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageView"
        android:layout_marginEnd="29dp"
        android:text="@string/Recycler_list" />
</RelativeLayout>