<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RecipeDetails"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="192dp"
        android:layout_height="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginRight="28dp" />
       <!-- android:layout_marginTop="28dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"-->



    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="12dp"
        android:layout_marginEnd="66dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="75dp"
        android:text="@string/recipe_name" />
       <!-- app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginBottom="224dp"

        android:layout_marginStart="60dp"
        android:text="@string/preptime" />
       <!-- app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"

        android:layout_marginStart="56dp"
        android:text="@string/nutvalue"  />
       <!-- app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" -->

    <!--<TextView
        android:id="@+id/textView4"
        android:layout_width="166dp"
        android:layout_height="23dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/ingredients_and_directions"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" /> -->

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="14dp"

        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo2"
        app:srcCompat="@drawable/printer" />
        <!--app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/textView4"-->


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"

        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo3"
        app:srcCompat="@drawable/calendar" />
        <!--app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"-->


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="17dp"

        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo4"
        app:srcCompat="@drawable/favourites" />
       <!-- app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4"-->


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginEnd="15dp"

        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo5"
        app:srcCompat="@drawable/rating" />
        <!--app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4"-->


    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginBottom="121dp"

        android:layout_marginStart="12dp"
        android:text="@string/INGREDIENTS" />
        <!--app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" -->

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginEnd="36dp"

        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo6"
        app:srcCompat="@drawable/facebook" />
       <!-- app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView4" -->


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="12dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo7"
        app:srcCompat="@drawable/like" />
       <!-- app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"-->


    <TextView
        android:id="@+id/textView4"
        android:layout_width="358dp"
        android:layout_height="0dp"
        android:layout_marginBottom="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Login_Status"
        android:textStyle="bold"/>
       <!-- app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"-->
</LinearLayout>