<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:orientation="vertical"
    android:layout_width="match_parent"
   android:layout_height="match_parent"
    android:background="#234567">


    <EditText
        android:id="@+id/edtName"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtIngred"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"

        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/ingredien"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtPreptime"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="162dp"
        android:ems="10"
        android:hint="@string/preptime"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtNutvalue"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/nutvalue"
        android:inputType="number" />


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="#265dc4"
        android:text="@string/update"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageViewFood"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_marginStart="117dp"

        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        app:srcCompat="@mipmap/ic_launcher" />
</RelativeLayout>

